# Raptor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  qt6.natvis
Doc/: Make.bat  Makefile
Doc/Source/: conf.py  index.rst
Resource/Config/: Raptor.yaml
Resource/Config/x64/: Raptor.ini
Resource/Config/x86/: Raptor.ini
Resource/Database/: Raptor.db  Raptor.sql
Script/: Raptor-Build-64Bit-With-Qt6.py  Raptor-Build-Windows-Qt6-64Bit.bat
Src/: Raptor.cpp  Raptor.rc  Raptor.rc.in
Src/Common/: RaptorDeclare.h  RaptorDefine.h  RaptorDefine.h.in
Src/Component/Contributor/: RaptorContributor.cpp  RaptorContributor.h
Src/Component/Eject/: RaptorEject.cpp  RaptorEject.h
Src/Component/IndicatorButton/: RaptorIndicatorButton.cpp  RaptorIndicatorButton.h
Src/Component/Loading/: RaptorLoading.cpp  RaptorLoading.h
Src/Component/Menu/: RaptorMenu.cpp  RaptorMenu.h  RaptorMenu.ui
Src/Component/TableView/: RaptorTableView.cpp  RaptorTableView.h
Src/Delegate/Eject/User/: RaptorUserViewDelegate.cpp  RaptorUserViewDelegate.h
Src/Delegate/Page/Common/: RaptorTableViewDelegate.cpp  RaptorTableViewDelegate.h
Src/Delegate/Page/Story/About/: RaptorTimelineDelegate.cpp  RaptorTimelineDelegate.h
Src/Delegate/Page/Transfer/Downloading/: RaptorDownloadingViewDelegate.cpp  (+1 more)
Src/Engine/: RaptorEngine.cpp  RaptorEngine.h
Src/Gui/Eject/CopyUser/: RaptorCopyUser.cpp  RaptorCopyUser.h  RaptorCopyUser.ui
Src/Gui/Eject/Device/: RaptorDevice.cpp  RaptorDevice.h  RaptorDevice.ui
Src/Gui/Eject/Download/: RaptorDownload.cpp  RaptorDownload.h  RaptorDownload.ui
Src/Gui/Eject/Folder/: RaptorFolder.cpp  RaptorFolder.h  RaptorFolder.ui
Src/Gui/Eject/Font/: RaptorFont.cpp  RaptorFont.h  RaptorFont.ui
Src/Gui/Eject/Import/: RaptorImport.cpp  RaptorImport.h  RaptorImport.ui
Src/Gui/Eject/Login/: RaptorLogin.cpp  RaptorLogin.h  RaptorLogin.ui
Src/Gui/Eject/Mask/: RaptorMask.cpp  RaptorMask.h  RaptorMask.ui
Src/Gui/Eject/MessageBox/: RaptorMessageBox.cpp  RaptorMessageBox.h  RaptorMessageBox.ui
Src/Gui/Eject/Notice/: RaptorNotice.cpp  RaptorNotice.h  RaptorNotice.ui
Src/Gui/Eject/Rename/: RaptorRename.cpp  RaptorRename.h  RaptorRename.ui
Src/Gui/Eject/Share/: RaptorShare.cpp  RaptorShare.h  RaptorShare.ui
Src/Gui/Eject/Toast/: RaptorToast.cpp  RaptorToast.h  RaptorToast.ui
Src/Gui/Eject/Upload/: RaptorUpload.cpp  RaptorUpload.h  RaptorUpload.ui
Src/Gui/Eject/User/: RaptorUser.cpp  RaptorUser.h  RaptorUser.ui
Src/Gui/Page/Media/: RaptorMediaPage.cpp  RaptorMediaPage.h  RaptorMediaPage.ui
Src/Gui/Page/Plus/: RaptorPlusPage.cpp  RaptorPlusPage.h  RaptorPlusPage.ui
Src/Gui/Page/Setting/: RaptorSettingPage.cpp  RaptorSettingPage.h  RaptorSettingPage.ui
Src/Gui/Page/Share/: RaptorSharePage.cpp  RaptorSharePage.h  RaptorSharePage.ui
Src/Gui/Page/Space/: RaptorSpacePage.cpp  RaptorSpacePage.h  RaptorSpacePage.ui
Src/Gui/Page/Star/: RaptorStarPage.cpp  RaptorStarPage.h  RaptorStarPage.ui
Src/Gui/Page/Story/: RaptorStoryPage.cpp  RaptorStoryPage.h  RaptorStoryPage.ui
Src/Gui/Page/Transfer/: RaptorTransferPage.cpp  RaptorTransferPage.h  RaptorTransferPage.ui
Src/Gui/Page/Trash/: RaptorTrashPage.cpp  RaptorTrashPage.h  RaptorTrashPage.ui
Src/Gui/World/: RaptorWorld.cpp  RaptorWorld.h  RaptorWorld.ui
Src/Header/Eject/User/: RaptorUserViewHeader.cpp  RaptorUserViewHeader.h
Src/Header/Page/Common/: RaptorTableViewHeader.cpp  RaptorTableViewHeader.h
Src/Model/Eject/Device/: RaptorDeviceViewModel.cpp  RaptorDeviceViewModel.h
Src/Model/Eject/Upload/: RaptorUploadViewModel.cpp  RaptorUploadViewModel.h
Src/Model/Eject/User/: RaptorUserViewModel.cpp  RaptorUserViewModel.h
Src/Model/Page/Media/: RaptorMediaViewModel.cpp  RaptorMediaViewModel.h
Src/Model/Page/Setting/: RaptorSettingViewModel.cpp  RaptorSettingViewModel.h
Src/Model/Page/Share/: RaptorShareViewModel.cpp  RaptorShareViewModel.h
Src/Model/Page/Space/: RaptorSpaceViewModel.cpp  RaptorSpaceViewModel.h
Src/Model/Page/Star/: RaptorStarViewModel.cpp  RaptorStarViewModel.h
Src/Model/Page/Trash/: RaptorTrashViewModel.cpp  RaptorTrashViewModel.h
Src/Suite/Aria/: RaptorAriaSuite.cpp  RaptorAriaSuite.h
Src/Suite/Authentication/: RaptorAuthenticationSuite.cpp  RaptorAuthenticationSuite.h
Src/Suite/Blur/: RaptorBlurSuite.cpp  RaptorBlurSuite.h
Src/Suite/Clean/: RaptorCleanSuite.cpp  RaptorCleanSuite.h
Src/Suite/Copilot/: RaptorCopilotSuite.cpp  RaptorCopilotSuite.h
Src/Suite/Copy/: RaptorCopySuite.cpp  RaptorCopySuite.h
Src/Suite/Downloaded/: RaptorDownloadedSuite.cpp  RaptorDownloadedSuite.h
Src/Suite/Downloading/: RaptorDownloadingSuite.cpp  RaptorDownloadingSuite.h
Src/Suite/File/: RaptorFileSuite.cpp  RaptorFileSuite.h
Src/Suite/Http/: RaptorHttpSuite.cpp  RaptorHttpSuite.h
Src/Suite/Log/: RaptorLogSuite.cpp  RaptorLogSuite.h
Src/Suite/Media/: RaptorMediaSuite.cpp  RaptorMediaSuite.h
Src/Suite/Persistence/: RaptorPersistenceSuite.cpp  RaptorPersistenceSuite.h
Src/Suite/Setting/: RaptorSettingSuite.cpp  RaptorSettingSuite.h
Src/Suite/Share/: RaptorShareSuite.cpp  RaptorShareSuite.h
Src/Suite/Star/: RaptorStarSuite.cpp  RaptorStarSuite.h
Src/Suite/Store/: RaptorStoreSuite.cpp  RaptorStoreSuite.h
Src/Suite/Trash/: RaptorTrashSuite.cpp  RaptorTrashSuite.h
Src/Suite/Uploaded/: RaptorUploadedSuite.cpp  RaptorUploadedSuite.h
Src/Suite/Uploading/: RaptorUploadingSuite.cpp  RaptorUploadingSuite.h
Src/Util/: RaptorBlurUtil.cpp  RaptorBlurUtil.h  RaptorUtil.cpp  RaptorUtil.h
Src/Worker/Downloading/: RaptorDownloadingWorker.cpp  RaptorDownloadingWorker.h
Src/Worker/Uploading/: RaptorUploadingWorker.cpp  RaptorUploadingWorker.h
Store/Legal/: Crypto++.LICENSE  LibCurl-MIT.LICENSE  LibSECP256K1-MIT.LICENSE  LibSass-MIT.LICENSE  LibUV-MIT.LICENSE  ZInt-GPL.LICENSE
Store/Story/: AboutQt.html  FAQ.html
Store/Style/Dark/: Raptor.sass  RaptorDefine.sass
Store/Style/Dark/World/: RaptorWorld.sass
Store/Style/Light/: Raptor.sass  RaptorDefine.sass
Store/Style/Light/Eject/: RaptorUser.sass
Store/Style/Light/World/: RaptorWorld.sass
(+130 files in other folders)
